--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/dpulliam/react-redux-scaffold/issues"
   },
-  "homepage": "https://github.com/dpulliam/react-redux-scaffold#readme"
+  "homepage": "https://github.com/dpulliam/react-redux-scaffold#readme",
+  "devDependencies": {
+    "webpack": "^1.13.2"
+  }
 }
