--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "echo \"No test specified\"",
     "clean": "rm -rf ./dist",
     "clean:deps": "rm -rf ./node_modules",
-    "build": "webpack --config webpack.prod.config.js",
+    "build": "npm run clean && webpack --config webpack.prod.config.js",
     "build:dev": "webpack --config webpack.dev.config.js",
-    "build:prod": "webpack --config webpack.prod.config.js",
-    "start": "webpack-dev-server --config webpack.dev.config.js"
+    "start": "webpack-dev-server --config webpack.prod.config.js",
+    "start:dev": "webpack-dev-server --config webpack.prod.config.js",
+    "stats": "webpack --config webpack.prod.config.js --profile --json > stats.json"
   },
   "repository": {
     "type": "git",
