Replace css with scss

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run clean && webpack --config webpack.prod.config.js",
     "build:dev": "webpack --config webpack.dev.config.js",
     "start": "webpack-dev-server --config webpack.prod.config.js",
-    "start:dev": "webpack-dev-server --config webpack.prod.config.js",
+    "start:dev": "webpack-dev-server --config webpack.dev.config.js",
     "stats": "webpack --config webpack.prod.config.js --profile --json > stats.json"
   },
   "repository": {
@@ -37,6 +37,8 @@
   "devDependencies": {
     "css-loader": "^0.24.0",
     "html-webpack-plugin": "^2.22.0",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1",
