Add linting for scss and js/jsx

--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"No test specified\"",
+    "lint": "npm run lint:src && npm run lint:test && npm run lint:styles",
+    "lint:src": "$(npm bin)/eslint --ext .js --ext .jsx 'src/' ",
+    "lint:test": "$(npm bin)/eslint --ext .js --ext .jsx 'test/'",
+    "lint:styles": "$(npm bin)/stylelint 'src/**/*.scss' --syntax scss",
     "clean": "rm -rf ./dist",
     "clean:deps": "rm -rf ./node_modules",
-    "build": "npm run clean && webpack --config webpack.prod.config.js",
-    "build:dev": "webpack --config webpack.dev.config.js",
-    "start": "webpack-dev-server --config webpack.prod.config.js",
-    "start:dev": "webpack-dev-server --config webpack.dev.config.js",
-    "stats": "webpack --config webpack.prod.config.js --profile --json > stats.json"
+    "build": "npm run clean && $(npm bin)/webpack --config webpack.prod.config.js",
+    "build:dev": "$(npm bin)/webpack --config webpack.dev.config.js",
+    "start": "$(npm bin)/webpack-dev-server --config webpack.prod.config.js",
+    "start:dev": "$(npm bin)/webpack-dev-server --config webpack.dev.config.js",
+    "stats": "$(npm bin)/webpack --config webpack.prod.config.js --profile --json > stats.json"
   },
   "repository": {
     "type": "git",
@@ -35,12 +39,19 @@
   },
   "homepage": "https://github.com/dpulliam/react-redux-scaffold#readme",
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "css-loader": "^0.24.0",
+    "eslint": "^3.4.0",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-react": "^6.2.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.1",
     "style-loader": "^0.13.1",
+    "stylelint": "^7.2.0",
+    "stylelint-config-standard": "^13.0.0",
+    "stylelint-config-suitcss": "^8.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1",
