--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Project scaffolding for react-redux application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"No test specified\"",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
+    "test:watch": "npm run test -- --watch",
     "lint": "npm run lint:src && npm run lint:test && npm run lint:styles",
     "lint:src": "$(npm bin)/eslint --ext .js --ext .jsx 'src/' ",
     "lint:test": "$(npm bin)/eslint --ext .js --ext .jsx 'test/'",
@@ -13,7 +14,6 @@
     "clean:deps": "rm -rf ./node_modules",
     "build": "npm run clean && $(npm bin)/webpack --config webpack.prod.config.js",
     "build:dev": "$(npm bin)/webpack --config webpack.dev.config.js",
-    "start": "$(npm bin)/webpack-dev-server --config webpack.prod.config.js",
     "start:dev": "$(npm bin)/webpack-dev-server --config webpack.dev.config.js",
     "stats": "$(npm bin)/webpack --config webpack.prod.config.js --profile --json > stats.json"
   },
@@ -39,14 +39,25 @@
   },
   "homepage": "https://github.com/dpulliam/react-redux-scaffold#readme",
   "devDependencies": {
+    "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "chai": "^3.5.0",
+    "chai-immutable": "^1.6.0",
     "css-loader": "^0.24.0",
     "eslint": "^3.4.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-react": "^6.2.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "jsdom": "^9.4.5",
+    "mocha": "^3.0.2",
     "node-sass": "^3.8.0",
+    "react-transform-hmr": "^1.0.4",
     "sass-loader": "^4.0.1",
     "style-loader": "^0.13.1",
     "stylelint": "^7.2.0",
@@ -58,6 +69,15 @@
     "webpack-validator": "^2.2.7"
   },
   "dependencies": {
-    "dotenv": "^2.0.0"
+    "dotenv": "^2.0.0",
+    "immutable": "^3.8.1",
+    "react": "^15.3.1",
+    "react-addons-pure-render-mixin": "^15.3.1",
+    "react-addons-test-utils": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.7.0",
+    "redux": "^3.6.0",
+    "socket.io-client": "^1.4.8"
   }
 }
