--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean:deps": "rm -rf ./node_modules",
     "build": "npm run clean && $(npm bin)/webpack --config webpack.prod.config.js",
     "build:dev": "$(npm bin)/webpack --config webpack.dev.config.js",
+    "start": "node ./server/server.js",
     "start:dev": "$(npm bin)/webpack-dev-server --config webpack.dev.config.js",
     "stats": "$(npm bin)/webpack --config webpack.prod.config.js --profile --json > stats.json"
   },
@@ -70,6 +71,7 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "express": "^4.14.0",
     "immutable": "^3.8.1",
     "react": "^15.3.1",
     "react-addons-pure-render-mixin": "^15.3.1",
