--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "eslint": "^3.4.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-react": "^6.2.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "jsdom": "^9.4.5",
     "mocha": "^3.0.2",
     "node-sass": "^3.8.0",
+    "purifycss-webpack-plugin": "^2.0.3",
     "react-transform-hmr": "^1.0.4",
     "sass-loader": "^4.0.1",
     "style-loader": "^0.13.1",
@@ -73,6 +75,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "immutable": "^3.8.1",
+    "purecss": "^0.6.0",
     "react": "^15.3.1",
     "react-addons-pure-render-mixin": "^15.3.1",
     "react-addons-test-utils": "^15.3.1",
